add_subdirectory(complex) # Добавляем в проект директорию complex
add_subdirectory(rational) # Добавляем в проект директорию rational
add_subdirectory(arrayd) # Добавляем в проект директорию arrayd
add_subdirectory(matrixvs)
add_subdirectory(matrixls)
add_subdirectory(matrixds)
add_subdirectory(stackl)
add_subdirectory(queuea)